--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.5",
+    "cheerio": "^1.0.0-rc.12",
     "puppeteer": "^21.5.2"
   }
 }
