--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
     "async": "^3.2.5",
     "cheerio": "^1.0.0-rc.12",
     "puppeteer": "^21.5.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "babel-loader": "^9.1.3",
+    "dotenv": "^16.3.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
