--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project involving ETL to give best economic decision to the user",
   "main": "scraper.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "Jest"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "@babel/core": "^7.23.6",
     "babel-loader": "^9.1.3",
     "dotenv": "^16.3.1",
+    "jest": "^29.7.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
