--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async": "^3.2.5",
     "cheerio": "^1.0.0-rc.12",
+    "fs": "^0.0.1-security",
     "puppeteer": "^21.5.2"
   },
   "devDependencies": {
